--- a/README.rdoc
+++ b/README.rdoc
@@ -1,28 +1,5 @@
-== README
+ruby 2.1.5p273 (2014-11-13 revision 48405) [x86_64-darwin14.0]
+Rails 4.1.8
 
-This README would normally document whatever steps are necessary to get the
-application up and running.
+This app will get your tasks stupid organized.
 
-Things you may want to cover:
-
-* Ruby version
-
-* System dependencies
-
-* Configuration
-
-* Database creation
-
-* Database initialization
-
-* How to run the test suite
-
-* Services (job queues, cache servers, search engines, etc.)
-
-* Deployment instructions
-
-* ...
-
-
-Please feel free to use a different markup language if you do not plan to run
-<tt>rake doc:app</tt>.
