messed something up in git

--- a/README.rdoc
+++ b/README.rdoc
@@ -1,5 +1,5 @@
 ruby 2.1.5p273 (2014-11-13 revision 48405) [x86_64-darwin14.0]
 Rails 4.1.8
 
-This app will get your tasks stupid organized.
+This app will get your tasks stupid organized!
 
